client/src/components/Footer/Footer.css
.footer{
    margin-top: 1rem;
    /* padding: 1rem; */
    bottom: 0;
    left: 0;
    width: 100%;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 16pt; 
    font: #f6f5f5;
  }

p {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  font-size: 16pt; 
  font: #f6f5f5;
}

